--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tsconfig/svelte": "^5.0.4",
+    "gh-pages": "^6.3.0",
     "sass": "^1.82.0",
     "svelte": "^5.2.7",
     "svelte-check": "^4.1.0",
     "tslib": "^2.8.1",
     "typescript": "~5.6.2",
-    "vite": "^6.0.1",
-    "gh-pages": "^6.3.0"
+    "vite": "^6.0.1"
   },
   "dependencies": {
-    "sass-embedded": "^1.82.0"
+    "sass-embedded": "^1.82.0",
+    "svelte-spa-router": "^4.0.1"
   }
 }
